--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --navbar-text-hover-color: #f9f9f9;
   --search-area: lightskyblue;
   --search-input-background: white;
+  --sucess-toast-background: greenyellow;
 }
 
 .site-body{
